syntax = "proto3";

package kv;

option go_package = "github.com/kvstore/distributed-kv/api;kv";

// KeyValue service - client-facing and replication
service KeyValue {
  rpc Get(GetRequest) returns (GetResponse);
  rpc Set(SetRequest) returns (SetResponse);
  rpc Delete(DeleteRequest) returns (DeleteResponse);
  // Replication: leader pushes to replicas
  rpc Replicate(ReplicateRequest) returns (ReplicateResponse);
}

// Cluster membership and leader election
service Cluster {
  rpc Heartbeat(HeartbeatRequest) returns (HeartbeatResponse);
  rpc RequestVote(RequestVoteRequest) returns (RequestVoteResponse);
  rpc GetClusterState(GetClusterStateRequest) returns (GetClusterStateResponse);
}

message GetRequest {
  string key = 1;
}

message GetResponse {
  bytes value = 1;
  bool found = 2;
}

message SetRequest {
  string key = 1;
  bytes value = 2;
  int64 version = 3;  // for replication ordering
}

message SetResponse {
  bool ok = 1;
}

message DeleteRequest {
  string key = 1;
  int64 version = 2;
}

message DeleteResponse {
  bool ok = 1;
}

message ReplicateRequest {
  string key = 1;
  bytes value = 2;
  int64 version = 3;
  bool is_delete = 4;
}

message ReplicateResponse {
  bool ok = 1;
}

message HeartbeatRequest {
  string node_id = 1;
  string address = 2;
  int64 term = 3;
  bool is_leader = 4;
}

message HeartbeatResponse {
  int64 term = 1;
  bool accepted = 2;
}

message RequestVoteRequest {
  string node_id = 1;
  int64 term = 2;
  int64 last_log_index = 3;
}

message RequestVoteResponse {
  int64 term = 1;
  bool vote_granted = 2;
}

message GetClusterStateRequest {}

message GetClusterStateResponse {
  repeated string node_ids = 1;
  repeated string addresses = 2;
  string leader_id = 3;
  int64 term = 4;
}
